[gd_scene load_steps=9 format=3 uid="uid://cj0rtudxn47e7"]

[ext_resource type="Script" uid="uid://cup2bx2eju7da" path="res://Script/items.gd" id="1_u5wui"]
[ext_resource type="AudioStream" uid="uid://cva25u1lro35k" path="res://08_human_charge_1.wav" id="2_aa2cp"]
[ext_resource type="Texture2D" uid="uid://bfkqrxcwuylye" path="res://char_blue_1.png" id="3_2kera"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aa2cp"]
size = Vector2(12, 39)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6d376"]
load_path = "res://.godot/imported/Tiles.png-825b95a5145508fffe81ba0fc1c92c0b.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_u5wui"]
load_path = "res://.godot/imported/Tiles.png-825b95a5145508fffe81ba0fc1c92c0b.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_aa2cp"]
load_path = "res://.godot/imported/Tiles.png-825b95a5145508fffe81ba0fc1c92c0b.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_nudqs"]
load_path = "res://.godot/imported/Tiles.png-825b95a5145508fffe81ba0fc1c92c0b.ctex"

[node name="Items" type="Area2D"]
position = Vector2(40, -39)
scale = Vector2(0.6, 0.6)
collision_layer = 0
collision_mask = 32
script = ExtResource("1_u5wui")

[node name="ItemShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11.5)
shape = SubResource("RectangleShape2D_aa2cp")

[node name="getItemAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_aa2cp")
volume_db = -2.364

[node name="ItemBox" type="Node2D" parent="."]

[node name="Key" type="Sprite2D" parent="ItemBox" groups=["items_box"]]
visible = false
texture = SubResource("CompressedTexture2D_6d376")
region_enabled = true
region_rect = Rect2(240, 320, 16, 12)

[node name="Potion_v1" type="Sprite2D" parent="ItemBox" groups=["items_box"]]
visible = false
texture = SubResource("CompressedTexture2D_u5wui")
region_enabled = true
region_rect = Rect2(258, 372, 12, 13)

[node name="Potion_v2" type="Sprite2D" parent="ItemBox" groups=["items_box"]]
visible = false
texture = SubResource("CompressedTexture2D_aa2cp")
region_enabled = true
region_rect = Rect2(242, 372, 12, 13)

[node name="Coin_v1" type="Sprite2D" parent="ItemBox" groups=["items_box"]]
visible = false
texture = SubResource("CompressedTexture2D_nudqs")
region_enabled = true
region_rect = Rect2(243, 338, 10, 11)

[node name="Coin_v2" type="Sprite2D" parent="ItemBox" groups=["items_box"]]
visible = false
scale = Vector2(1.5, 1.5)
texture = SubResource("CompressedTexture2D_nudqs")
region_enabled = true
region_rect = Rect2(243, 338, 10, 11)

[node name="Skill_v1" type="Sprite2D" parent="ItemBox" groups=["items_box"]]
visible = false
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_2kera")
region_enabled = true
region_rect = Rect2(176, 452, 14, 19)
